# SnakeGame

./: CMakeLists.txt  readme.md  reference.cpp
assets/powerdowns/description/: autotomy.txt  catalytic_reaction.txt  doppelganger.txt  el_nino.txt  energy_loss.txt  foggy.txt  hot_zone.txt  imminent_stardom.txt  inked.txt  late_bird.txt  pepper_spray.txt  sloth_lazy.txt
assets/powerups/description/: air_purifier.txt  apple_pie.txt  cheat_code.txt  deluxe_harvest.txt  fast_bolt.txt  greenhouse.txt  il_milione.txt  infiltration.txt  marvel_of_travel.txt  omnivore.txt  rush_e.txt  zen_zone.txt
header/: constants.h  food.h  game.h  poison.h  powerupsystem.h  snake.h
src/: food.cpp  game.cpp  main.cpp  poison.cpp  powerupsystem.cpp  snake.cpp
